Fix post index items, sidebar, and text wrapping problems

--- a/app/assets/stylesheets/posts_index.scss
+++ b/app/assets/stylesheets/posts_index.scss
@@ -50,6 +50,7 @@
 }
 
 .posts {
+  float: left;
   margin-left: 10px;
 }
 
@@ -57,17 +58,10 @@
   margin-top: 10px;
   font-size: medium;
 
-  &:after {
-    content: "";
-    clear: both;
-    display: block;
-  }
-
   .rank {
     float: left;
     margin-top: 14px;
     margin-left: 8px;
-    font-align: right;
     font-family: arial;
     color: #c6c6c6;
   }
@@ -90,10 +84,6 @@
     }
   }
 
-  .post-content {
-    display: flex;
-  }
-
   .picture {
     float: left;
     margin-right: 5px;
@@ -105,8 +95,8 @@
   }
 
   a.post-title {
-    color: blue;
     margin-right: 8px;
+    color: blue;
 
     &:hover {
       color: blue;
@@ -115,7 +105,6 @@
   }
 
   .domain a {
-    display: inline-block;
     color: #888;
     font-size: x-small;
 
@@ -171,15 +160,6 @@
 
     .votes {
       margin-left: 12px;
-    }
-
-    &:after {
-      position: absolute;
-      bottom: 3px;
-      right: 3px;
-      content: "what's this?";
-      color: #336699;
-      font-size: x-small;
     }
 
     &:hover:after {
